# nozomi-cli

./: .gitignore  README.md  pyproject.toml
scripts/: build.sh
src/conductor/cli/commands/install/: __init__.py
src/nozomi/cli/: __main__.py  console_colors.py
src/nozomi/cli/commands/add_shortcut/: README.md  __init__.py  error_codes.py
src/nozomi/cli/commands/info/: README.md  __init__.py
src/nozomi/cli/commands/install/: README.md  __init__.py  error_codes.py
src/nozomi/cli/commands/remove_shortcut/: README.md  __init__.py  error_codes.py
src/nozomi/lib/: command.py  constants.py  steam_helper.py  vdf_file.py
