[project]
name = "nozomi"
version = "1.1.4"
authors = [
    { name = "Carlos Chulo" }
]
description = "All in one solution for managing all games within steam."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyinstaller == 6.14.2",
    "vdf == 3.4",
    "jsonschema == 4.22.0",
]

[project.entry-points."console_scripts"]
cli-name = "nozomi.cli.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages
include = ["nozomi*"] # package names should match these glob patterns
